<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:layout_height="match_parent">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="20sp"
                            android:layout_margin="20dp"
                            android:text="@string/fac00"
                            android:textColor="#000"
                            android:textStyle="italic"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="15sp"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="20dp"
                            android:text="@string/fc00"
                            android:textColor="#000"
                            android:textStyle="italic"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="20sp"
                            android:layout_margin="20dp"
                            android:text="@string/fac0"
                            android:textColor="#000"
                            android:textStyle="italic"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="15sp"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="20dp"
                            android:text="@string/fc0"
                            android:textColor="#000"
                            android:textStyle="italic"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="20sp"
                            android:layout_margin="20dp"
                            android:text="@string/fac1"
                            android:textColor="#000"
                            android:textStyle="italic"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="15sp"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="20dp"
                            android:text="@string/fc1"
                            android:textColor="#000"
                            android:textStyle="italic"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="20sp"
                            android:layout_margin="20dp"
                            android:text="@string/fac2"
                            android:textColor="#000"
                            android:textStyle="italic"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="15sp"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="20dp"
                            android:text="@string/fc2"
                            android:textColor="#000"
                            android:textStyle="italic"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="20sp"
                            android:layout_margin="20dp"
                            android:text="@string/fac3"
                            android:textColor="#000"
                            android:textStyle="italic"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="15sp"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="20dp"
                            android:text="@string/fc3"
                            android:textColor="#000"
                            android:textStyle="italic"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="20sp"
                            android:layout_margin="20dp"
                            android:text="@string/fac5"
                            android:textColor="#000"
                            android:textStyle="italic"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="15sp"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="20dp"
                            android:text="@string/fc5"
                            android:textColor="#000"
                            android:textStyle="italic"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="20sp"
                            android:layout_margin="20dp"
                            android:text="@string/fac6"
                            android:textColor="#000"
                            android:textStyle="italic"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="15sp"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="20dp"
                            android:text="@string/fc6"
                            android:textColor="#000"
                            android:textStyle="italic"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="20sp"
                            android:layout_margin="20dp"
                            android:text="@string/fac7"
                            android:textColor="#000"
                            android:textStyle="italic"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="15sp"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="20dp"
                            android:text="@string/fc7"
                            android:layout_marginBottom="20dp"
                            android:textColor="#000"
                            android:textStyle="italic"/>

                </LinearLayout>
        </ScrollView>

</RelativeLayout>